# mines

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: README.md  atlas.kra  border.fs.glsl  border.gs.glsl  border.vs.glsl  counter.fs.glsl  counter.vs.glsl  field.fs.glsl  field.gs.glsl  field.vs.glsl  smile.fs.glsl  smile.vs.glsl
src/: CMakeLists.txt  basic_types.h  cell.h  definitions.h  field.c  field.h  glfw_callbacks.c  glfw_callbacks.h  logger.c  logger.h  main.c  mines.rc  version.h.in
src/game/: border.c  border.h  cell.h  counter.c  counter.h  difficulty.h  field.c  field.h  game.c  game.h  smile.c  smile.h  window.c  window.h
src/glad/: glad.h
src/graphics/: opengl.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/math/: matrix4x4.c  matrix4x4.h  projection.h
src/settings/: definitions.h
src/util/: basic_types.h  discord.c  discord.h  logger.c  logger.h  matrix4x4.c  matrix4x4.h  resources.c  resources.h
