cmake_minimum_required(VERSION 3.20)
project(mines VERSION 1.0 LANGUAGES C)

set(PROJECT_DEPS_DIR ${PROJECT_SOURCE_DIR}/deps)
set(PROJECT_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(PROJECT_ASSETS_DIR ${PROJECT_SOURCE_DIR}/assets)
set(PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_INSTALL OFF CACHE BOOL "" FORCE)
add_subdirectory(${PROJECT_DEPS_DIR}/glfw)

if(MSVC)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup")
endif()

add_subdirectory(src)